report_code_quality.txt
/home/ronald/Github/test.c:5:17: error: 6 is a magic number; consider replacing it with a named constant [readability-magic-numbers,-warnings-as-errors]
       char msg[6];
                ^
/home/ronald/Github/teste.c:6:14: error: 6 is a magic number; consider replacing it with a named constant [readability-magic-numbers,-warnings-as-errors]
    char msg[6];
             ^
